--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         margin-bottom: 10px;
       }
     </style>
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/jquery.tabpager.js"></script>
     <script>
       $(document).ready(function()
